<resources>
    <string name="app_name">CoinConverter</string>
    <string name="coin_name">Nome da moeda</string>
    <string name="term">AAA</string>
    <string name="conversion_from">Conversão de 1</string>
    <string name="coin_value">R$0,00</string>
    <string name="hello">Hello!</string>
    <string name="slide">Slide</string>
    <string name="page">Page</string>
    <string name="currencies">Moedas</string>
    <string name="converter">Conversor</string>
    <string name="historic">Historico</string>
    <string name="coin_conversion_name">Nome da conversão</string>
    <string name="percentage">%</string>
    <string name="something_went_wrong">Algo de errado aconteceu…</string>
    <string name="sign">R$</string>
    <string name="stock_exchange">Bolsa de valores</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="previous">Anterior</string>
    <string name="next">Próximo</string>
    <string name="bitcoin_name_and_aaa">Nome / AAA</string>
    <string name="value_0_00">0.00</string>
    <string name="variation_percentage">Porcentagem de Variação</string>
    <string name="custom_conversion">CONVERSÃO PERSONALIZADA</string>
    <string name="bitcoin_quote_on_major_exchanges">Cotação do bitcoin nas principais corretoras</string>
    <string name="conversion_menu">Menu de conversão</string>
    <string name="value_for_conversion">Valor para conversão</string>
    <string name="result">Resultado</string>
    <string name="quote_of_the_main_currencies_for_the_real">Cotação das principais moedas para o real</string>
    <string name="hello_welcome">Olá, Seja bem-vindo!</string>
    <string name="before_continuing_we_want_you_to_know_a_little_about_our_functions">Antes de continuar, queremos que você conheça um pouco de nossas funções!</string>
    <string name="in_this_app_you_can">Neste app você pode</string>
    <string name="make_the_conversion_of_the_chosen_currency">Efetuar a conversão da moeda escolhida.</string>
    <string name="use_the_app_offline_with_the_latest_data_received">Utilizar o app de forma offline, com os utimos dados recebidos.</string>
    <string name="follow_the_index_of_some_stock_exchanges_and_the_price_of_bitcoin_in_some_brokers">Acompanhar o índice de algumas bolsas de valores, e a cotação do bitcoin em algumas corretoras.</string>
    <string name="stock_market_indices_around_the_world">Índices de bolsas de valores pelo mundo</string>
    <string name="thanks_for_using_our_app">Obrigado por utilizar nosso app!</string>
    <string name="developed_in_a_minimalist_way_so_you_have_an_excellent_experience">Desenvolvido de uma forma minimalista, para que você tenha uma excelente experiencia!</string>
    <string name="start">INICIAR</string>
    <string name="term_and_stock_name">Termo / Nome da bolsa</string>
    <string name="stock_location">Localização</string>
    <string name="categories">Categorias</string>
</resources>