<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewThirdWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textViewThirdWelcomeOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito"
        android:ems="8"
        android:text="@string/thanks_for_using_our_app"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textViewThirdWelcomeTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="15"
        android:fontFamily="@font/nunito"
        android:text="@string/developed_in_a_minimalist_way_so_you_have_an_excellent_experience"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_init"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/start" />


</LinearLayout>