<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewConverterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/conversion_menu"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUnitaryValueConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/coin_value"
        android:textColor="@color/main_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textInputValueLayoutConverter"
        app:layout_constraintTop_toBottomOf="@+id/textViewConverterTitle" />

    <TextView
        android:id="@+id/textViewTermConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/term"
        android:textColor="@color/main_gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUnitaryValueConverter"
        app:layout_constraintStart_toStartOf="@+id/textInputValueLayoutConverter" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputValueLayoutConverter"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/value_for_conversion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUnitaryValueConverter">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextValueConverter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:fontFamily="@font/nunito"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewResultConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito"
        android:text="@string/result"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputValueLayoutConverter" />

    <TextView
        android:id="@+id/textViewResultValueConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultConverter"
        android:text="@string/sign"
        android:maxEms="7"
        android:ellipsize="end"
        android:maxLines="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>