<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/black_gradient_bg">

            <TextView
                android:id="@+id/textViewBitcoinName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitcoin_name_and_aaa"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito_bold"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/textViewBitcoinVariation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/variation_percentage"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito_bold"
                android:textSize="16sp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="@id/textViewBitcoinName"
                app:layout_constraintBottom_toBottomOf="@id/textViewBitcoinName"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textViewBitcoinValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/coin_value"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/textViewBitcoinName"
                app:layout_constraintTop_toBottomOf="@id/textViewBitcoinName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>