<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/black_gradient_bg">


            <TextView
                android:id="@+id/textViewStockName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/term_and_stock_name"
                android:textColor="@color/main_gray"
                android:fontFamily="@font/nunito_bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewStockLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_location"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito_light"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/textViewStockName"
                app:layout_constraintStart_toStartOf="@id/textViewStockName"/>

            <ImageView
                android:id="@+id/imageViewStockVariation"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_up"
                app:layout_constraintStart_toStartOf="@id/textViewStockLocation"
                app:layout_constraintTop_toBottomOf="@id/textViewStockLocation"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/textViewStockVariation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/value_0_00"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="@id/imageViewStockVariation"
                app:layout_constraintStart_toEndOf="@id/imageViewStockVariation"
                app:layout_constraintTop_toTopOf="@id/imageViewStockVariation" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>